Getting benchmark to run

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 data-fbmysql-range-locking
 mysql-5.6-orig
 mysql-5.6-range-locking
+data-fbmysql-orig/
+data-fbmysql-orig.clean/
+data-fbmysql-range-locking
+data-fbmysql-range-locking.clean
